force-app/main/default/objects/Master_Mapping_Feature__c/Master_Mapping_Feature__c.object-meta.xml
<CustomObject>
    <label>Master Mapping Feature</label>
    <nameField>
        <label>Master Mapping Fitur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Mapping Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>