force-app/main/default/objects/Master_Mapping_Feature__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>SSC_Call_Type__c</referenceTo>
    <relationshipLabel>Master Mapping Features</relationshipLabel>
    <relationshipName>Master_Mapping_Features</relationshipName>
    <type>Lookup</type>
</CustomField>