force-app/main/default/objects/Master_Mapping_Feature__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>SCC_Call_Type_Feature__c</referenceTo>
    <relationshipLabel>Master Mapping Features</relationshipLabel>
    <relationshipName>Master_Mapping_Features</relationshipName>
    <type>Lookup</type>
</CustomField>