force-app/main/default/objects/Master_Mapping_Feature__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>remark 1 from TRRemark</description>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>