force-app/main/default/objects/Master_Mapping_Feature__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Remark_2__c</columns>
    <columns>Remark__c</columns>
    <columns>Provider__c</columns>
    <columns>Feature__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>8434</value>
    </filters>
    <label>All</label>
</ListView>